--- a/style.css
+++ b/style.css
@@ -144,6 +144,12 @@ h3 {
     box-shadow: inset 2px 2px 3px 3px rgb(62, 62, 107);
     padding: 10px;
 }
+.devi2 p{
+    background-color: seashell;
+    border-radius: 30px;
+    padding: 10px;
+}
+
 
 .pied{
     text-align: center;
